src/objects/Trailblazer__c.object
<CustomObject>
    <description>A custom object to hold Trailhead profiles for the trailhead leaderboard.</description>
    <fields>
        <fullName>Badges__c</fullName>
        <description>Number of Trailhead Badges</description>
        <label>Badges</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Institution__c</fullName>
        <label>Company/Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Number of Trailhead points</description>
        <label>Points</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <description>The Id of the Trailblazer&apos;s profile on Trailhead</description>
        <externalId>true</externalId>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Profile_Link__c</fullName>
        <description>Link to the Trailblazer&apos;s profile on Trailhead</description>
        <label>Profile Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Profile_Photo__c</fullName>
        <description>Trailhead profile photo</description>
        <label>Profile Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Trailhead Profile Rank</description>
        <label>Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailblazer_Since__c</fullName>
        <description>The date the Trailblazer started Trailhead</description>
        <label>Trailblazer Since</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trails__c</fullName>
        <description>Number of Trailhead trails completed</description>
        <label>Trails</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trailblazer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Badges__c</columns>
        <columns>Points__c</columns>
        <columns>Trails__c</columns>
        <columns>Profile_Link__c</columns>
        <columns>Trailblazer_Since__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trailblazer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailblazers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>